play full screen background video

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>sonotize2-web-marketing</title>
+    <title>Sonotize</title>
   </head>
   <body>
     <div id="app"></div>
